<resources>
    <string name="app_name">MyCheckins</string>
    <string name="crime_title_hint">Enter a title for the activity.</string>
    <string name="place_hint">Enter a place for the activity.</string>
    <string name="detail_hint">Enter details for the activity.</string>
    <string name="activity_title_label">Activity Title</string>
    <string name="activity_details_label">Details</string>
    <string name="activity_solved_label">Click to favourite</string>
    <string name="dislike">Click to dislike</string>
    <string name="date_picker_title">Date of activity:</string>
    <string name="new_activity">New</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d activities</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="activity_report_text">Share</string>
    <string name="activity_report">%1$s!
 The checkins was discovered on %2$s. %3$s, and %4$s
 </string>
    <string name="activity_report_solved">The case is solved</string>
    <string name="activity_report_unsolved">The case is not solved</string>
    <string name="activity_report_no_suspect">there is no suspect.</string>
    <string name="activity_report_suspect">the suspect is %s.</string>
    <string name="activity_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send activity report via</string>
    <string name="delete_activity">Delete Activity</string>

    <string name="map_button">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_title">Map Location</string>
    <!--<string name="location_text">lat: 37.4220\nlong: -122.0840</string>-->
    <string name="location_text">lat: %1$f\nlong: %2$f</string>
    <string name="show_map_text">Show Map</string>
    <string name="google_maps_key">AIzaSyCpOCxsPbl-tXlRIV4nzhnRibIYymdznfY</string>
</resources>
