<?xml version="1.0" encoding="utf-8"?>
<!--holds whole page-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <!--holds all added features-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <!--holds camera-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/receipt_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:drawable/ic_menu_gallery"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/crime_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>

        <!--holds buttton list-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_title_label"/>


            <EditText
            android:id="@+id/crime_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/crime_title_hint"/>

            <EditText
                android:id="@+id/place_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/place_hint"/>

            <EditText
                android:id="@+id/details_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/detail_hint"/>
        </LinearLayout>


    </LinearLayout>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_details_label"/>

    <Button
        android:id="@+id/activity_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/crime_suspect_text"/>

    <Button
        android:id="@+id/activity_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_report_text"/>


    <Button
        android:id="@+id/remove_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_activity"
        app:showAsAction="ifRoom"/>



    <Button
        android:id="@+id/map_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/map_button"
        app:showAsAction="ifRoom"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/activity_solved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_solved_label" />

        <CheckBox
            android:id="@+id/dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dislike" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/location_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="365dp"
        android:layout_height="48dp" />

</LinearLayout>
